--- a/src/_size.scss
+++ b/src/_size.scss
@@ -4,9 +4,9 @@
 //  |___/_/__\___|
 //
 // =====================================================================================================
-@use '../lib/sass-door' as *;
 @use 'sass:map';
 @use 'sass:math';
+@use 'lib/sassdoor' as *;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 // prettier-ignore
