--- a/src/_color.scss
+++ b/src/_color.scss
@@ -9,7 +9,7 @@
 @use 'sass:math';
 @use 'sass:meta';
 @use 'sass:color';
-@use '../lib/sass-door' as *;
+@use 'lib/sassdoor' as *;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// This mixin creates dark and light variations of the same theme. Dark color scheme is default.
