--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -7,7 +7,7 @@
 @use 'sass:map';
 @use 'sass:math';
 @use 'sass:list';
-@use '../lib/sass-door' as *;
+@use 'lib/sassdoor' as *;
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /// The $class-name-grid variable sets the name for the grid CSS class.
