--- a/test/playground/index.scss
+++ b/test/playground/index.scss
@@ -1,5 +1,5 @@
-@use '../../src/lib/sassdoor.scss';
-@use '../../index' as *;
+@use 'src/lib/sassdoor.scss';
+@use '../../index.scss' as *;
 
 body {
   font-family: monospace;
